fix wrong font size for sortable column headers

--- a/src/css/less/yiistrap/yiistrap.less
+++ b/src/css/less/yiistrap/yiistrap.less
@@ -12,4 +12,9 @@
 		font-size: inherit;
 		color: inherit;
 	}
+	
+	// sortable column headers have the wrong font size
+	.table th > .sort-link {
+		font-size: @baseFontSize;
+	}
 }
